refactor : 주문 삭제 시 조회되지 않는 기능 추가, 안 쓰는 코드 삭제, Optimize Imports